Fix PlaylistSlideShow component flickering; update styles and add new playlist data

--- a/src/app/(pages)/(dashboard)/components/PlaylistSlideShow/slide-styles.css
+++ b/src/app/(pages)/(dashboard)/components/PlaylistSlideShow/slide-styles.css
@@ -20,3 +20,13 @@
 .swiper-button-next {
     color: white; 
 }
+
+@media (width < 968px) {
+  .swiper-button-prev {
+    display: none;
+}
+
+.swiper-button-next {
+  display: none;
+}
+}
